--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxt/image": "^0.6.2",
     "core-js": "^3.15.1",
+    "firebase": "^9.8.3",
     "nuxt": "^2.15.7",
     "vuetify": "^2.5.5"
   },
